    - Remove debian/patches/hurd-i386/cvs-termios-IXANY.patch (merged)
    - Remove debian/patches/hurd-i386/submitted-getnprocs.diff (merged)
    - Update debian/patches/hurd-i386/submitted-readlinkat.diff
    - Remove debian/patches/ia64/cvs-memchr.diff (merged)
    - Remove debian/patches/ia64/submitted-memchr.diff (merged)
    - Remove debian/patches/ia64/submitted-siginfo.diff (merged)
    - Remove debian/patches/locale/cvs-C-first_weekday.diff (merged)
    - Update debian/patches/localedata/first_weekday.diff
    - Update debian/patches/localedata/tailor-iso14651_t1.diff
    - Remove debian/patches/mips/local-lazy-eval.diff (obsolete)
    - Remove debian/patches/s390/submitted-siginfo.diff (merged)
    - testsuite-checking/expected-results-ia64-linux-gnu-libc: update
    - Update testsuite-checking/expected-results-sparc-linux-gnu-libc
    - Update testsuite-checking/expected-results-sparcv9b-linux-gnu-sparcv9b

  * Add debian/patches/alpha/local-fcntl_h.diff.
  * Add debian/patches/hppa/local-ELF_MACHINE_BEFORE_RTLD_RELOC.diff from
    Carlos O'Donell.
  * Add debian/patches/hppa/local-_dl_fptr_init.diff from Carlos O'Donnell.
  * Add debian/patches/localedata/locale-hsb_DE.diff

  [ Aurelien Jarno ]
  * Enable multi-arch.
  * Add debian/patches/kfreebsd/local-syscalls_2.11.patch to add the
    lchflag syscalls on GNU/kFreeBSD.
  * Add debian/patches/alpha/local-longjmp-chk.diff and
    debian/patches/alpha/cvs-timer_settime.diff to fix FTBFS on alpha, and
    debian/patches/alpha/local-lowlevellock.diff to fix the testsuite.
  * Add debian/patches/mips/local-lowlevellock.diff to fix the testsuite
    on mips.
  * Re-enable the testsuite on mips/mipsel build daemons.
  * Add debian/patches/arm/local-atomic.diff and 
    debian/patches/arm/local-lowlevellock.diff to fix the testsuite on arm.
  * Add debian/patches/hppa/local-longjmp-chk.diff to fix FTBFS on hppa.
  * Add debian/patches/hppa/local-lowlevellock.diff to fix the testsuite
    on hppa.